# visa-jobs-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  index.html  pyproject.toml
.github/workflows/: build-release-binaries.yml  deploy-pages.yml  go-staticcheck.yml  go-tests.yml
Formula/: visa-jobs-mcp.rb
cmd/visa-jobs-mcp/: main.go
doc/: eda-2026-02-19.md  internal-pipeline.md  spec.md  v2-plan.md
internal/contract/: contract.json  loader.go  loader_test.go
internal/mcp/: contract_parity_test.go  input_schema.go  server.go  server_test.go
internal/user/: assistant_tools.go  assistant_tools_test.go  data_export.go  data_export_test.go  job_common.go  job_list_store.go  job_pipeline_helpers.go  job_pipeline_store.go  job_reference.go  job_tools_ignored.go  job_tools_pipeline.go  job_tools_saved.go  jobs_test.go  memory.go  memory_test.go  pipeline_tools.go  pipeline_tools_test.go  preferences.go  preferences_test.go  readiness.go  runtime_ids.go  search_dataset.go  search_dataset_test.go  search_e2e_test.go  search_eval.go  search_linkedin.go  search_linkedin_test.go  search_models.go  search_query.go  search_runner.go  search_runtime.go  search_salary.go  search_session.go  (+7 more)
scripts/: build_release_binaries.sh  generate_contract_docs.py  install.ps1  install.sh  refresh_jobspy_snapshot.sh  release_tag.sh  run_internal_pipeline.sh  run_live_linkedin_e2e.sh
tests/: test_job_management_v2.py  test_jobspy_adapter.py  test_mcp_stdio_smoke.py  test_paths.py  test_pipeline.py  test_preferences.py  test_saved_and_ignored_jobs.py  test_server.py  test_setup_and_doctor_cli.py  test_user_memory_blob.py
(+19 files in other folders)
