[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visa-jobs-mcp"
version = "0.3.1"
description = "Internal pipeline utilities for refreshing visa sponsorship datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "openpyxl>=3.1.0"
]

[project.scripts]
visa-jobs-pipeline = "visa_jobs_mcp.pipeline_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
